--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/node": "^18.11.13",
 		"@types/nprogress": "^0.2.0",
 		"@types/sortablejs": "^1.15.0",
+		"@types/spark-md5": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.46.0",
 		"@typescript-eslint/parser": "^5.46.0",
 		"@vitejs/plugin-vue": "^4.0.0",
@@ -50,6 +51,7 @@
 		"eslint-plugin-vue": "^9.8.0",
 		"prettier": "^2.8.1",
 		"sass": "^1.56.2",
+		"spark-md5": "^3.0.2",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.0",
 		"vite-plugin-vue-setup-extend": "^0.4.0",
