--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"echarts-gl": "^2.0.9",
 		"echarts-wordcloud": "^2.1.0",
 		"element-plus": "^2.2.26",
+		"file-saver": "^2.0.5",
+		"html2canvas": "^1.4.1",
 		"js-cookie": "^3.0.1",
 		"js-table2excel": "^1.0.3",
 		"jsplumb": "^2.15.6",
@@ -39,6 +41,7 @@
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@types/file-saver": "^2.0.5",
 		"@types/node": "^18.11.13",
 		"@types/nprogress": "^0.2.0",
 		"@types/sortablejs": "^1.15.0",
