--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "screenfull": "^6.0.2",
     "sortablejs": "^1.15.0",
     "splitpanes": "^3.1.5",
-    "swiper": "^9.2.0",
+    "swiper": "^5.4.5",
     "tinymce": "^5.10.3",
+    "vant": "^3.4.4",
     "vue": "^3.2.45",
     "vue-clipboard3": "^2.0.0",
     "vue-grid-layout": "^3.0.0-beta1",
