--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite --force",
     "build": "vite build",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/"
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "deploy": "vite build && scp -r ./dist/* root@www.yakir.cn:/home/wwwroot/www.yakir.cn"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
@@ -21,7 +22,7 @@
     "echarts": "^5.4.1",
     "echarts-gl": "^2.0.9",
     "echarts-wordcloud": "^2.1.0",
-    "element-plus": "^2.2.26",
+    "element-plus": "^2.3.4",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.1",
